src/components/Layout/Layout.module.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

body {
    margin: 0;
}

.layout {
    display: grid;
    grid-template-areas:
        'header'
        'main'
        'footer';
    grid-template-rows: auto 1fr auto;
    min-height: 100vh;
}

.content {
    display: grid;
    grid-template-areas:
        'about'
        'projects'
        'skills'
        'contact';
    grid-gap: 2rem;
    justify-content: center;
}

.content > section {
    background: rgba(255, 255, 255, 0.97);
    text-align: center;
    padding: 2rem;
    margin: 0 2rem;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
    max-width: 1100px;
}

.footer {
    display: grid;
    justify-content: center;
    align-content: center;
    padding: 1rem;
    color: #fff;
}

